docs/api/qiskit/0.19/qiskit.transpiler.passes.TrivialLayout.mdx
---
title: TrivialLayout (v0.19)
description: API reference for qiskit.transpiler.passes.TrivialLayout in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.TrivialLayout
---

# TrivialLayout

<Class id="qiskit.transpiler.passes.TrivialLayout" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/layout/trivial_layout.py" signature="TrivialLayout(*args, **kwargs)" modifiers="class">
  Choose a Layout by assigning `n` circuit qubits to device qubits `0, .., n-1`.

  A pass for choosing a Layout of a circuit onto a Coupling graph, using a simple round-robin order.

  This pass associates a physical qubit (int) to each virtual qubit of the circuit (Qubit) in increasing order.

  Does not assume any ancilla.

  TrivialLayout initializer.

  **Parameters**

  **coupling\_map** (*Coupling*) – directed graph representing a coupling map.

  **Raises**

  [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if invalid options

  ## Attributes

  <span id="triviallayout-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.TrivialLayout.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="triviallayout-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.TrivialLayout.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="triviallayout-name" />

  ### name

  <Function id="qiskit.transpiler.passes.TrivialLayout.name" signature="TrivialLayout.name()">
    Return the name of the pass.
  </Function>

  <span id="triviallayout-run" />

  ### run

  <Function id="qiskit.transpiler.passes.TrivialLayout.run" signature="TrivialLayout.run(dag)">
    Run the TrivialLayout pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to find layout for.

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if dag wider than self.coupling\_map
  </Function>
</Class>

